--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -5,7 +5,7 @@
             <div appEffectDirective class="content text-center grid">
                 <div class="inner-content">
                     <div class="image-div" alt="image">
-                        <img class="image" src="../../../assets/GSA-13-min.jpg" alt="image">
+                        <img class="image" src="../../../assets/me.jpg" alt="image">
                     </div>
                     <div class="neon-wrapper">
                         <span class="txt" id="name">I am Abhishek Gupta.</span>
