Added project section

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -2,20 +2,26 @@
     <div class="row h-100">
         <div class="col-md-2"></div>
         <div class="col col-md-8 grid h-100">
-            <div appEffectDirective class="content text-center grid">
-                <div class="inner-content">
-                    <div class="image-div" alt="image">
-                        <img class="image" src="../../../assets/me.jpg" alt="image">
+            <div class="container-fluid h-100">
+                <div class="row h-100">
+                    <div class="col-lg-2"></div>
+                    <div appEffectDirective class="content text-center grid col col-lg-8">
+                        <div class="inner-content">
+                            <div class="image-div" alt="image">
+                                <img class="image" src="./assets/me.jpg" alt="image">
+                            </div>
+                            <div class="neon-wrapper">
+                                <span class="txt" id="name">I am Abhishek Gupta.</span>
+                                <span class="gradient"></span>
+                                <span class="dodge"></span>
+                            </div>
+                            <br />
+                            <span id="role">Full Stack Developer.</span>
+                            <br />
+                            <span id="hobby">Security Enthusiastic.</span>
+                        </div>
                     </div>
-                    <div class="neon-wrapper">
-                        <span class="txt" id="name">I am Abhishek Gupta.</span>
-                        <span class="gradient"></span>
-                        <span class="dodge"></span>
-                    </div>
-                    <br />
-                    <span id="role">Full Stack Developer.</span>
-                    <br />
-                    <span id="hobby">Security Enthusiastic.</span>
+                    <div class="col-lg-2"></div>
                 </div>
             </div>
         </div>
