--- a/src/app/home/banner/banner.component.css
+++ b/src/app/home/banner/banner.component.css
@@ -1,3 +1,7 @@
+:host {
+    cursor: move;
+}
+
 @property --gradient-angle {
     syntax: "<angle>";
     initial-value: 0deg;
@@ -14,7 +18,7 @@
     position: relative;
     min-height: 20rem;
     min-width: 20rem;
-    height: 25rem;
+    height: 30rem;
     width: 35rem;
     padding: 2rem;
     background-color: var(--bg-color);
