--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -5,7 +5,7 @@
             <app-heading></app-heading>
             <div class="container-fluid h-100">
                 <div class="row h-100">
-                    <div class="col-12 col-lg-3">
+                    <div class="col-12 col-lg-3 m-0 mb-2">
                         <ul class="nav-tabs jobs-tabs nav flex-column">
                             <li>
                                 <a class="nav-link" [ngClass]="{'active': tab === 'TCS'}" (click)="selectedTab('TCS')">TCS</a>
