--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,9 @@
 :host {
     display: block;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .page-content {
-    padding: 1.25rem;
-    height: 600px;
-    min-height: 100%;
+    /* padding: 1.25rem; */
+    min-height: inherit;
 }
