--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,11 +1,9 @@
-<div class="container-fluid h-100 p-2">
-    <div class="row h-100">
-        <div class="col-md-2"></div>
-        <div class="col col-md-8 grid h-100">
-            <div class="container-fluid h-100">
-                <div class="row h-100">
-                    <div class="col-lg-2"></div>
-                    <div appEffectDirective class="content text-center grid col col-lg-8">
+<div class="main-container container-fluid p-2">
+    <div class="row justify-content-center align-content-lg-center">
+        <div class="col">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div appEffectDirective class="content text-center col-8 grid">
                         <div class="inner-content">
                             <div class="image-div" alt="image">
                                 <img class="image" src="./assets/me.jpg" alt="image">
@@ -21,10 +19,8 @@
                             <span id="hobby">Security Enthusiastic.</span>
                         </div>
                     </div>
-                    <div class="col-lg-2"></div>
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>
     </div>
 </div>
