--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -5,8 +5,12 @@
                 <div class="row justify-content-center">
                     <div appEffectDirective class="content text-center col-8 grid">
                         <div class="inner-content">
-                            <div class="image-div" alt="image">
-                                <img class="image" src="./assets/me.jpg" alt="image">
+                            <div class="container-fluid m-0 p-0">
+                                <div class="row justify-content-center p-0 m-0">
+                                    <div class="col image-div" alt="image">
+                                        <img class="image" src="./assets/me.jpg" alt="image">
+                                    </div>
+                                </div>
                             </div>
                             <div class="neon-wrapper">
                                 <span class="txt" id="name">I am Abhishek Gupta.</span>
