--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -9,9 +9,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
                 <!-- <a class="nav-link active" aria-current="page" routerLink="" routerLinkActive="active">Home</a> -->
-                <a class="nav-link" routerLink="about-me" routerLinkActive="active">01. About Me</a>
-                <a class="nav-link" routerLink="experience" routerLinkActive="active">02. Experience</a>
-                <a class="nav-link" routerLink="projects" routerLinkActive="active">03. Projects</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="about-me" routerLinkActive="active">01. About Me</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="experience" routerLinkActive="active">02. Experience</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="projects" routerLinkActive="active">03. Projects</a>
             </div>
         </div>
     </div>
