--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -17,7 +17,7 @@
                 I take pride in being in the top 3% on TryHackMe, a testament to my passion for cybersecurity and my continuous quest for excellence. This achievement reflects my dedication to staying at the forefront of this ever-evolving field.
             </p>
 
-            <a href="https://tryhackme.com/p/zang2012" target="_blank">
+            <a class="link" href="https://tryhackme.com/p/zang2012" target="_blank">
                 Link to my TRYHACKME profile
             </a>
 
