--- a/src/app/home/experience/experience.component.css
+++ b/src/app/home/experience/experience.component.css
@@ -1,11 +1,11 @@
-h4,
-h5 {
+h4 {
     color: var(--text-color);
 }
 
 h5 {
     font-size: 1rem;
-    opacity: 0.5;
+    opacity: 0.8;
+    color: var(--accent-color);
 }
 
 .jobs .jobs-tabs ul {
@@ -51,24 +51,24 @@ a {
 .nav-tabs .nav-link {
     color: var(--text-color);
     background-color: var(--bg-color);
-    border-color: var(--border-color);
 }
 
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-    color: var(--bg-color);
+    --border-color: (255, 0, 0 .7);
+    color: var(--accent-color);
     background-color: var(--text-color);
-    border-color: var(--border-color);
     font-weight: 600;
+    border: 0.25rem solid var(--border-color);
 }
 
 .nav-tabs .nav-link {
     margin-bottom: -1px;
-    border: 1px solid transparent;
+    /* border: 1px solid transparent;
     border-top-color: transparent;
     border-right-color: transparent;
     border-bottom-color: transparent;
-    border-left-color: transparent;
+    border-left-color: transparent; */
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
 }
