--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -15,7 +15,7 @@
                             </li> -->
                         </ul>
                     </div>
-                    <div *ngIf="tab === 'TCS'" class="col-12 col-lg">
+                    <div *ngIf="tab === 'TCS'" class="col-12 col-lg" data-aos="fade-up" data-aos-duration="1000">
                         <h4>System Engineer | Tata Consultancy Services</h4>
                         <h5>August, 2020 - August, 2022</h5>
                         <p>I spearheaded the enhancement of our web application's functionality by designing and engineering high-performance RESTful APIs using Node.js and Express.js. This strategic upgrade resulted in a remarkable 20% boost in system efficiency,
@@ -28,7 +28,7 @@
                             and technologies.</p>
                     </div>
 
-                    <div *ngIf="tab === 'Google'" class="col-12 col-lg">
+                    <div *ngIf="tab === 'Google'" class="col-12 col-lg" data-aos="fade-up" data-aos-duration="1000">
                         <h4>Software Engineer | Google</h4>
                         <h5>August, 2024 - Present</h5>
                         <p>I spearheaded the enhancement of our web application's functionality by designing and engineering high-performance RESTful APIs using Node.js and Express.js. This strategic upgrade resulted in a remarkable 20% boost in system efficiency,
