--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -4,7 +4,7 @@
             <app-heading></app-heading>
         </div>
     </div>
-    <div class="row m-0 mr-2 ml-2 mb-3">
+    <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="container-fluid p-0 pr-3">
             <div class="row">
                 <div class="col-12">
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="row m-0 mr-2 ml-2 mb-3">
+    <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="container-fluid p-0 pr-3">
             <div class="row">
                 <div class="col-12 col-lg-3 offset-lg-9">
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="row m-0 mr-2 ml-2 mb-3">
+    <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="container-fluid p-0 pr-3">
             <div class="row">
                 <div class="col-12">
@@ -156,7 +156,7 @@
             </div>
         </div>
     </div>
-    <div class="row m-0 mr-2 ml-2 mb-3">
+    <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="container-fluid p-0 pr-3">
             <div class="row">
                 <div class="col-12 col-lg-3 offset-lg-9">
