--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0 pb-5">
+<div class="container-fluid p-0 pb-5 pr-lg-5 pl-lg-5">
     <div class="row">
         <div class="col-12">
             <app-heading></app-heading>
