--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
     --border-color: #CCCCCC;
     --icon-button-color: #FFFFFF;
     --accent-color: #FF0000;
+    --neon-color: #FF007f;
     --shadow-color: #333333;
     --shadow-elevation: 0px 0.8px 0.9px var(--shadow-color), 0.1px 2.7px 3px -0.8px var(--shadow-color), 0.1px 6.8px 7.7px -1.7px var(--shadow-color), 0.3px 16.6px 18.7px -2.5px var(--shadow-color);
 }
@@ -45,3 +46,68 @@ picture {
 a:hover {
     color: var(--accent-color);
 }
+
+
+/* Neon Button styling START */
+
+.neon-button {
+    position: relative;
+    font-size: 1.5rem;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--accent-color);
+    border: var(--accent-color) 0.125em solid;
+    padding: 0.25em 1em;
+    border-radius: 0.25em;
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--accent-color);
+    box-shadow: inset 0 0 0.5em 0 var(--accent-color), 0 0 0.5em 0 var(--accent-color);
+}
+
+.neon-button::before {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    background: var(--accent-color);
+    top: 120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1.5em);
+    opacity: 0.7;
+}
+
+.neon-button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    box-shadow: 0 0 2em 0.5em var(--accent-color);
+    background: var(--accent-color);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 100ms linear;
+}
+
+.neon-button:hover,
+.neon-button:focus-visible {
+    color: var(--bg-color);
+    text-shadow: none;
+    text-decoration: none;
+}
+
+.neon-button:hover::before,
+.neon-button:focus-visible::before {
+    opacity: 1;
+}
+
+.neon-button:hover::after,
+.neon-button:focus-visible::after {
+    opacity: 1;
+}
+
+
+/* Neon Button styling END */
