--- a/src/app/general/footer/footer.component.css
+++ b/src/app/general/footer/footer.component.css
@@ -57,16 +57,17 @@
 }
 
 .footer-credits {
-    font-size: 0.75rem;
+    font-size: 1rem;
     line-height: 1;
     position: absolute;
-    margin: auto;
+    /* margin: auto; */
     left: 0;
     right: 0;
-    margin-top: -3.75rem;
+    /* margin-top: -3.75rem; */
 }
 
-.footer-credits a {
+
+/* .footer-credits a {
     -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition-property: all;
@@ -77,4 +78,8 @@
     &:focus {
         text-decoration: none;
     }
+} */
+
+.footer-credits a {
+    text-decoration: none;
 }
