--- a/src/app/general/footer/footer.component.html
+++ b/src/app/general/footer/footer.component.html
@@ -1,26 +1,31 @@
 <footer>
-    <div [@animateFooter]>
-        <ul class="footer-left-bar d-none d-md-block">
-            <li>
-                <a href="https://github.com/gup-abhi" target='_blank'>
-                    <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/abhishekguptadelhi/" target='_blank'>
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-        </ul>
-        <div class="footer-right-bar d-none d-md-block">
-            <a href="mailto:agupta.engineer.email@gmail.com" target='_blank'>agupta.engineer.email@gmail.com </a>
+    <div class="container-fluid">
+        <div class="row">
+            <div [@animateFooter]>
+                <ul class="footer-left-bar d-none d-md-block">
+                    <li>
+                        <a href="https://github.com/gup-abhi" target='_blank'>
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/abhishekguptadelhi/" target='_blank'>
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </li>
+                </ul>
+                <div class="footer-right-bar d-none d-md-block">
+                    <a href="mailto:agupta.engineer.email@gmail.com" target='_blank'>agupta.engineer.email@gmail.com </a>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="footer-credits text-center">
-        <a href="https://github.com/gup-abhi" target="_blank" rel="nofollow noopener noreferrer">
-            <div>Design and Built with Angular by Abhishek Gupta</div>
-        </a>
+    <div class="row">
+        <div class="col-12 footer-credits text-center p-2">
+            <a href="https://github.com/gup-abhi" target="_blank" rel="nofollow noopener noreferrer">
+                <div>Design and Built with Angular by Abhishek Gupta</div>
+            </a>
+        </div>
     </div>
-
 </footer>
