--- a/src/app/general/header/header.component.css
+++ b/src/app/general/header/header.component.css
@@ -19,3 +19,23 @@ nav {
 .navbar .neon-button:focus-visible {
     color: var(--bg-color);
 }
+
+.navbar .navbar-brand {
+    color: var(--accent-color);
+}
+
+.navbar .navbar-brand:hover {
+    color: var(--text-color);
+}
+
+.navbar-dark .navbar-nav .nav-link:focus-visible,
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: var(--accent-color);
+}
+
+.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show>.nav-link {
+    color: var(--accent-color);
+}
