--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="experience" routerLinkActive="active">02. Experience</a>
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="projects" routerLinkActive="active">03. Projects</a>
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="contact" routerLinkActive="active">04. Contact</a>
-                <a href="#" class="neon-button">Resume</a>
+                <a href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" class="neon-button">Resume</a>
             </div>
         </div>
     </div>
