--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" routerLink="" routerLinkActive="active">
+        <a class="navbar-brand" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="" routerLinkActive="active">
             Abhishek
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
