--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -11,8 +11,9 @@
                 <!-- <a class="nav-link active" aria-current="page" routerLink="" routerLinkActive="active">Home</a> -->
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="about-me" routerLinkActive="active">01. About Me</a>
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="experience" routerLinkActive="active">02. Experience</a>
-                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="projects" routerLinkActive="active">03. Projects</a>
-                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="contact" routerLinkActive="active">04. Contact</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="education" routerLinkActive="active">03. Education</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="projects" routerLinkActive="active">04. Projects</a>
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="contact" routerLinkActive="active">05. Contact</a>
                 <a href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" class="neon-button">Resume</a>
             </div>
         </div>
