Added images for project

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -25,7 +25,9 @@
                 my commitment to combining form and function in web development, making it an engaging showcase of my talents and experiences.
             </p>
         </div>
-        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6">
+            <img src="./assets/personal-portfolio.png" alt="project-image-1" class="project-image">
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
@@ -68,7 +70,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6">
+            <img src="./assets/top-250-movies.png" alt="project-image-2" class="project-image">
+        </div>
         <div class="col-12 col-lg-6 project-description p-0">
             <p class="p-2 m-0">
                 In this full-stack project, we developed a robust Node.js server that leverages open APIs from IMDB to retrieve and store data on the top 250 movies. Advanced data management techniques were used to optimize data storage in a SQLite database. Our Node.js
@@ -87,17 +91,17 @@
                         </li>
                         <li class="ml-3">
                             <span class="underline">
+                                Node
+                            </span>
+                        </li>
+                        <li class="ml-3">
+                            <span class="underline">
                                 Bootstrap
                             </span>
                         </li>
                         <li class="ml-3">
                             <span class="underline">
-                                HTML
-                            </span>
-                        </li>
-                        <li class="ml-3">
-                            <span class="underline">
-                                CSS
+                                SQLite
                             </span>
                         </li>
                     </ul>
@@ -126,14 +130,16 @@
                 editor, empowering users to customize their posts, including the addition of multimedia elements, fostering rich and interactive content creation on the platform.
             </p>
         </div>
-        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6">
+            <img src="./assets/django-blog.png" alt="project-image-3" class="project-image">
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
                     <ul class="project-skills justify-content-start">
                         <li class="ml-3">
                             <span class="underline">
-                                Angular
+                                Django
                             </span>
                         </li>
                         <li class="ml-3">
@@ -143,12 +149,12 @@
                         </li>
                         <li class="ml-3">
                             <span class="underline">
-                                HTML
+                                Python
                             </span>
                         </li>
                         <li class="ml-3">
                             <span class="underline">
-                                CSS
+                                SQLite
                             </span>
                         </li>
                     </ul>
@@ -183,22 +189,12 @@
                     <ul class="project-skills justify-content-lg-end">
                         <li class="ml-3">
                             <span class="underline">
-                                Angular
+                                Python
                             </span>
                         </li>
                         <li class="ml-3">
-                            <span class="underline">
-                                Bootstrap
-                            </span>
-                        </li>
-                        <li class="ml-3">
-                            <span class="underline">
-                                HTML
-                            </span>
-                        </li>
-                        <li class="ml-3">
-                            <span class="underline">
-                                CSS
+                            <span class="underline rounded-full">
+                                Pygame
                             </span>
                         </li>
                     </ul>
