Added space invader image

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -25,7 +25,7 @@
                 my commitment to combining form and function in web development, making it an engaging showcase of my talents and experiences.
             </p>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-lg-6">
             <img src="./assets/personal-portfolio.png" alt="project-image-1" class="project-image">
         </div>
         <div class="container-fluid">
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-lg-6">
             <img src="./assets/top-250-movies.png" alt="project-image-2" class="project-image">
         </div>
         <div class="col-12 col-lg-6 project-description p-0">
@@ -130,7 +130,7 @@
                 editor, empowering users to customize their posts, including the addition of multimedia elements, fostering rich and interactive content creation on the platform.
             </p>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-lg-6">
             <img src="./assets/django-blog.png" alt="project-image-3" class="project-image">
         </div>
         <div class="container-fluid">
@@ -175,7 +175,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-6"></div>
+        <div class="col-lg-6">
+            <img src="./assets/space-invader.png" alt="project-image-4" class="project-image">
+        </div>
         <div class="col-12 col-lg-6 project-description p-0">
             <p class="p-2 m-0">
                 I took a trip down memory lane by creating my own version of the beloved classic, "Space Invader," using Python and the pygame module. In this nostalgic game, the objective is to defend our planet from an incoming alien invasion. Players are in control
