--- a/src/app/general/header/header.component.css
+++ b/src/app/general/header/header.component.css
@@ -44,6 +44,6 @@ nav {
     border: 1px solid var(--accent-color);
 }
 
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
+} */
