--- a/src/app/home/banner/banner.component.css
+++ b/src/app/home/banner/banner.component.css
@@ -56,7 +56,7 @@
 
 .content::after {
     inset: -1rem;
-    background: conic-gradient(from var(--gradient-angle), red, orange, red);
+    background: conic-gradient(from var(--gradient-angle), var(--gradient-color-1), var(--gradient-color-2), var(--gradient-color-1));
     transform: translateZ(-50px);
     border-radius: inherit;
     animation: rotation 20s linear infinite;
@@ -116,7 +116,7 @@
 }
 
 .gradient {
-    background: linear-gradient(45deg, red, orange);
+    background: linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
     background-size: 400%;
     background-position: left;
     position: absolute;
