--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -10,7 +10,7 @@
                 Get in touch!
             </h2>
             <p>
-                I will be happy to receive your contact if you want to talk about new opportunities. Write me, and I will reply as soon as I see your message. Simple one-page design that features a profile letter with basic information about a person.
+                I will be happy to receive your contact if you want to talk about new opportunities. Write me, and I will reply as soon as I see your message.
             </p>
             <div class="container p-3">
                 <div class="row justify-content-center">
