Added small changes and changed color scheme

--- a/src/app/general/footer/footer.component.html
+++ b/src/app/general/footer/footer.component.html
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="col-12 footer-credits text-center p-2">
             <a href="https://github.com/gup-abhi" target="_blank" rel="nofollow noopener noreferrer">
-                <div>Design and Built with Angular by Abhishek Gupta</div>
+                Design and Built with Angular by Abhishek Gupta
             </a>
         </div>
     </div>
