--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -20,7 +20,7 @@
                             <br />
                             <span id="role">Full Stack Developer.</span>
                             <br />
-                            <span id="hobby">Security Enthusiastic.</span>
+                            <span id="hobby">Cybersecurity Enthusiastic.</span>
                         </div>
                     </div>
                 </div>
