--- a/src/app/shared/components/heading/heading.component.html
+++ b/src/app/shared/components/heading/heading.component.html
@@ -2,7 +2,12 @@
     <div class="row">
         <div class="col p-2">
             <h3>
-                {{ heading }}
+               <span class="title-number">
+                {{ heading.num }}
+               </span>
+               <span class="title-text">
+                {{ heading.title }}
+               </span>
             </h3>
         </div>
     </div>
