--- a/src/app/general/footer/footer.component.css
+++ b/src/app/general/footer/footer.component.css
@@ -52,8 +52,14 @@
     -webkit-writing-mode: vertical-rl;
     -ms-writing-mode: tb-rl;
     writing-mode: vertical-rl;
-    margin: 20px auto;
+    margin: 1.25rem auto;
     padding: 0.625rem;
+    color: var(--text-color);
+}
+
+.footer-right-bar a:hover,
+.footer-right-bar a:focus-visible {
+    color: var(--accent-color);
 }
 
 .footer-credits {
@@ -82,4 +88,10 @@
 
 .footer-credits a {
     text-decoration: none;
+    color: var(--text-color);
+}
+
+.footer-credits a:hover,
+.footer-credits a:focus-visible {
+    color: var(--accent-color);
 }
