Added box-shadow on scroll to header

--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark">
+<nav appIntersectionObserver class="navbar navbar-expand-lg sticky-top navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="" routerLinkActive="active">
             Abhishek
