Added project urls

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -55,6 +55,13 @@
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-lg-6 p-0">
+                    <a href="https://gup-abhi.github.io/personal-portfolio/">
+                        <i class="ml-3 fas fa-external-link-alt"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-up" data-aos-duration="1000">
@@ -105,6 +112,13 @@
                             </span>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6 offset-lg-6 p-0">
+                    <a class="d-lg-flex justify-content-lg-end" href="https://top-250-movies.onrender.com/">
+                        <i class="ml-3 fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -158,6 +172,13 @@
                             </span>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6 p-0">
+                    <a href="https://django-blog-oclq.onrender.com/">
+                        <i class="ml-3 fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
         </div>
