Fixed image issue

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -25,7 +25,7 @@
                 my commitment to combining form and function in web development, making it an engaging showcase of my talents and experiences.
             </p>
         </div>
-        <div class="d-none col-lg-6">
+        <div class="d-none d-lg-block col-lg-6">
             <img src="./assets/personal-portfolio.png" alt="project-image-1" class="project-image">
         </div>
         <div class="container-fluid">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-none col-lg-6">
+        <div class="d-none d-lg-block col-lg-6">
             <img src="./assets/top-250-movies.png" alt="project-image-2" class="project-image">
         </div>
         <div class="col-12 col-lg-6 project-description p-0">
@@ -144,7 +144,7 @@
                 editor, empowering users to customize their posts, including the addition of multimedia elements, fostering rich and interactive content creation on the platform.
             </p>
         </div>
-        <div class="d-none col-lg-6">
+        <div class="d-none d-lg-block col-lg-6">
             <img src="./assets/django-blog.png" alt="project-image-3" class="project-image">
         </div>
         <div class="container-fluid">
@@ -196,7 +196,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-none col-lg-6">
+        <div class="d-none d-lg-block col-lg-6">
             <img src="./assets/space-invader.png" alt="project-image-4" class="project-image">
         </div>
         <div class="col-12 col-lg-6 project-description p-0">
