Added target to a tags

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -57,7 +57,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
-                    <a href="https://gup-abhi.github.io/personal-portfolio/">
+                    <a href="https://gup-abhi.github.io/personal-portfolio/" target="_blank">
                         <i class="ml-3 fas fa-external-link-alt"></i>
                     </a>
                 </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6 offset-lg-6 p-0">
-                    <a class="d-lg-flex justify-content-lg-end" href="https://top-250-movies.onrender.com/">
+                    <a class="d-lg-flex justify-content-lg-end" href="https://top-250-movies.onrender.com/" target="_blank">
                         <i class="ml-3 fas fa-external-link-alt"></i>
                     </a>
                 </div>
@@ -176,7 +176,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
-                    <a href="https://django-blog-oclq.onrender.com/">
+                    <a href="https://django-blog-oclq.onrender.com/" target="_blank">
                         <i class="ml-3 fas fa-external-link-alt"></i>
                     </a>
                 </div>
