--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="education" routerLinkActive="active">03. Education</a>
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="projects" routerLinkActive="active">04. Projects</a>
                 <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="contact" routerLinkActive="active">05. Contact</a>
-                <a href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" class="neon-button">Resume</a>
+                <a (click)="downloadFile()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" class="neon-button">Resume</a>
             </div>
         </div>
     </div>
