--- a/src/app/home/education/education.component.html
+++ b/src/app/home/education/education.component.html
@@ -8,10 +8,10 @@
                     <div class="col-12 col-lg-3 m-0 mb-2">
                         <ul class="nav-tabs education-tabs nav flex-column">
                             <li>
-                                <a class="nav-link" [ngClass]="{'active': tab === 'Master'}" (click)="selectedTab('Master')">Master's</a>
+                                <a class="nav-link" [ngClass]="{'active': tab === 'Master'}" (click)='selectedTab("Master"); googleAnalytics.sendAnalyticEvent("click_button", "education", "master-button")'>Master's</a>
                             </li>
                             <li>
-                                <a class="nav-link" [ngClass]="{'active': tab === 'Bachelor'}" (click)="selectedTab('Bachelor')">Bachelor's</a>
+                                <a class="nav-link" [ngClass]="{'active': tab === 'Bachelor'}" (click)='selectedTab("Bachelor"); googleAnalytics.sendAnalyticEvent("click_button", "education", "master-button")'>Bachelor's</a>
                             </li>
                         </ul>
                     </div>
